Color Bugfix and initial version of start-shift service.

--- a/shuttle-client/src/styles.css
+++ b/shuttle-client/src/styles.css
@@ -94,7 +94,7 @@
 }
 
 .custom-toast .ui-toast-message-success {
-  background-color: #FFF5F6 !important;
+  background-color: #80a368 !important;
 }
 
 .custom-toast .ui-toast .ui-toast-message-content {
